--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
+    "react-webcam": "^7.2.0",
     "sass": "^1.85.1"
   }
 }
