--- a/photobooth-app/package.json
+++ b/photobooth-app/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.8.1",
+    "cors": "^2.8.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router": "^7.2.0",
     "react-router-dom": "^7.2.0",
+    "react-webcam": "^7.2.0",
     "sass": "^1.85.1",
     "uuid": "^11.1.0"
   },
@@ -27,6 +30,6 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
-    "vite": "^6.1.0"
+    "vite": "^6.2.0"
   }
 }
