--- a/photobooth-api/package.json
+++ b/photobooth-api/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.8.1",
+    "busboy": "^1.6.0",
     "canvas": "^3.1.0",
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
