--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axios": "^1.8.1",
+    "busboy": "^1.6.0",
     "cors": "^2.8.5",
     "html2canvas": "^1.4.1",
     "react": "^19.0.0",
